@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>info.cukes</groupId>
     <artifactId>cucumber-jvm</artifactId>
-    <version>1.0.0.RC14-SNAPSHOT</version>
+    <version>1.0.12-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Cucumber-JVM</name>
     <url>http://cukes.info/</url>
@@ -10,13 +10,14 @@
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
-        <version>6</version>
+        <version>7</version>
     </parent>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <outputDirectory>${project.build.directory}</outputDirectory>
-        <gherkin.version>2.7.6</gherkin.version>
-        <groovy.version>1.8.5</groovy.version>
+        <gherkin.version>2.11.1</gherkin.version>
+        <groovy.version>2.0.0</groovy.version>
     </properties>
     <licenses>
         <license>
@@ -32,12 +33,18 @@
     </scm>
     <distributionManagement>
         <site>
-            <id>cukes</id>
+            <id>cukes.info</id>
             <url>scp://cukes.info/var/www/cucumber_site/cucumber/jvm/api/${project.version}</url>
         </site>
     </distributionManagement>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>info.cukes</groupId>
+                <artifactId>cucumber-deps</artifactId>
+                <scope>provided</scope>
+                <version>1.0.0</version>
+            </dependency>
             <dependency>
                 <groupId>info.cukes</groupId>
                 <artifactId>cucumber-core</artifactId>
@@ -84,26 +91,6 @@
                 <version>${groovy.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.googlecode.java-diff-utils</groupId>
-                <artifactId>diffutils</artifactId>
-                <version>1.2.1</version>
-            </dependency>
-            <dependency>
-                <groupId>com.thoughtworks.xstream</groupId>
-                <artifactId>xstream</artifactId>
-                <version>1.4.2</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>xmlpull</groupId>
-                        <artifactId>xmlpull</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>xpp3</groupId>
-                        <artifactId>xpp3_min</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
                 <groupId>org.picocontainer</groupId>
                 <artifactId>picocontainer</artifactId>
                 <version>2.14.1</version>
@@ -111,7 +98,7 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-tx</artifactId>
-                <version>3.1.0.RELEASE</version>
+                <version>3.1.1.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>com.google.inject</groupId>
@@ -119,29 +106,25 @@
                 <version>3.0</version>
             </dependency>
             <dependency>
-                <groupId>org.codehaus.groovy</groupId>
-                <artifactId>groovy-all</artifactId>
-                <version>2.0.0-beta-2</version>
-            </dependency>
-            <dependency>
                 <groupId>org.scala-lang</groupId>
                 <artifactId>scala-library</artifactId>
-                <version>2.9.1</version>
+                <version>2.10.0-M4</version>
             </dependency>
             <dependency>
                 <groupId>org.scala-lang</groupId>
                 <artifactId>scala-compiler</artifactId>
-                <version>2.9.1</version>
+                <version>2.10.0-M4</version>
             </dependency>
             <dependency>
                 <groupId>org.clojure</groupId>
                 <artifactId>clojure</artifactId>
-                <version>1.4.0-alpha3</version>
+                <!-- Remember to bounce version in examples/clojure_cukes/project.clj as well -->
+                <version>1.5.0-alpha2</version>
             </dependency>
             <dependency>
-                <groupId>rhino</groupId>
-                <artifactId>js</artifactId>
-                <version>1.7R2</version>
+                <groupId>org.mozilla</groupId>
+                <artifactId>rhino</artifactId>
+                <version>1.7R4</version>
             </dependency>
             <dependency>
                 <groupId>org.ioke</groupId>
@@ -167,61 +150,63 @@
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-all</artifactId>
                 <version>1.9.0</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jsoup</groupId>
+                <artifactId>jsoup</artifactId>
+                <version>1.6.3</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-chrome-driver</artifactId>
-                <version>2.17.0</version>
+                <version>2.24.1</version>
             </dependency>
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-server</artifactId>
-                <version>2.17.0</version>
+                <version>2.24.1</version>
             </dependency>
             <dependency>
                 <groupId>org.webbitserver</groupId>
                 <artifactId>webbit</artifactId>
-                <version>0.3.2</version>
-            </dependency>
-            <dependency>
-                <groupId>commons-lang</groupId>
-                <artifactId>commons-lang</artifactId>
-                <version>2.4</version>
-            </dependency>
-            <dependency>
-                <groupId>asm</groupId>
-                <artifactId>asm</artifactId>
-                <version>3.3.1</version>
-            </dependency>
-            <dependency>
-                <groupId>cglib</groupId>
-                <artifactId>cglib-nodep</artifactId>
-                <version>2.1_3</version>
+                <version>0.4.8</version>
             </dependency>
             <dependency>
                 <groupId>org.jruby</groupId>
                 <artifactId>jruby-complete</artifactId>
-                <version>1.6.5.1</version>
+                <version>1.6.7.2</version>
             </dependency>
             <dependency>
                 <groupId>org.jboss.weld.se</groupId>
                 <artifactId>weld-se</artifactId>
-                <version>1.1.4.Final</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.openejb</groupId>
-                <artifactId>openejb-core</artifactId>
-                <version>4.0.0-beta-2</version>
+                <version>2.0.0.Alpha2</version>
             </dependency>
             <dependency>
                 <groupId>javax.enterprise</groupId>
                 <artifactId>cdi-api</artifactId>
-                <version>1.1.EDR1.1</version>
+                <version>1.1.EDR1.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.openejb</groupId>
+                <artifactId>openejb-core</artifactId>
+                <version>4.0.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>net.sourceforge.cobertura</groupId>
+                <artifactId>cobertura</artifactId>
+                <version>1.9.4.1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
 
     <repositories>
+        <repository>
+            <id>cucumber-deps</id>
+            <url>file://${basedir}/../deps/repository</url>
+        </repository>
         <repository>
             <id>codehaus</id>
             <url>http://repository.codehaus.org</url>
@@ -229,10 +214,6 @@
         <repository>
             <id>jboss.org</id>
             <url>https://repository.jboss.org/nexus/content/groups/public-jboss</url>
-        </repository>
-        <repository>
-            <id>sonatype.org</id>
-            <url>https://oss.sonatype.org/content/repositories/releases</url>
         </repository>
     </repositories>
 
@@ -249,11 +230,11 @@
 
     <modules>
         <module>core</module>
+        <module>picocontainer</module>
+        <module>clojure</module>
         <module>junit</module>
         <module>jruby</module>
-        <module>scala</module>
         <module>jython</module>
-        <module>picocontainer</module>
         <module>spring</module>
         <module>guice</module>
         <module>weld</module>
@@ -261,18 +242,11 @@
         <module>ioke</module>
         <module>rhino</module>
         <module>java</module>
-        <module>clojure</module>
         <module>openejb</module>
+        <module>scala</module>
     </modules>
 
     <profiles>
-        <!--profile>
-            <id>aruba</id>
-            <modules>
-                <module>tmp/aruba</module>
-            </modules>
-        </profile-->
-
         <profile>
             <id>examples</id>
             <modules>
@@ -285,6 +259,12 @@
 
         <profile>
             <id>release-sign-artifacts</id>
+            <modules>
+                <module>examples/java-calculator</module>
+                <module>examples/groovy-calculator</module>
+                <module>examples/scala-calculator</module>
+                <module>examples/java-webbit-websockets-selenium</module>
+            </modules>
             <activation>
                 <property>
                     <name>performRelease</name>
@@ -294,8 +274,9 @@
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
-                        <version>2.2.1</version>
+                        <version>2.2.2</version>
                         <configuration>
                             <tagNameFormat>v@{project.version}</tagNameFormat>
                         </configuration>
@@ -304,7 +285,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.1</version>
+                        <version>1.4</version>
                         <configuration>
                             <useAgent>true</useAgent>
                         </configuration>
@@ -321,17 +302,6 @@
 
                 </plugins>
             </build>
-        </profile>
-        <profile>
-            <id>cucumber-jvm-snapshot</id>
-            <activation>
-                <property>
-                    <name>snapshot</name>
-                </property>
-            </activation>
-            <modules>
-                <module>openejb</module>
-            </modules>
         </profile>
     </profiles>
 
@@ -384,6 +354,7 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -400,8 +371,42 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12</version>
+                <configuration>
+                    <argLine>-Duser.language=en</argLine>
+                    <argLine>-Xmx1024m</argLine>
+                    <argLine>-XX:MaxPermSize=256m</argLine>
+                    <useFile>false</useFile>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>2.4.1</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>.</directory>
+                            <includes>
+                                <include>**/*.ser</include>
+                            </includes>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.0</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.8.1</version>
             </plugin>
         </plugins>
 
@@ -409,7 +414,7 @@
             <extension>
                 <groupId>org.apache.maven.wagon</groupId>
                 <artifactId>wagon-ssh</artifactId>
-                <version>1.0</version>
+                <version>2.2</version>
             </extension>
         </extensions>
     </build>
